--- a/src/components/Den/Den.module.css
+++ b/src/components/Den/Den.module.css
@@ -1,9 +1,18 @@
 .mw681{
     max-width: 681px;
 }
+.mw581{
+    max-width: 581px;
+}
+.mw590{
+    max-width: 590px;
+}
 .denbox{
     border-radius: 25px;
     width: 267px;
     box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 15px;
+}
+.width4{
+    width: 200px;
 }
